# context-snipe

./: .dockerignore  .gitattributes  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  install.ps1  install.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
site/: index.html
src/: deps.rs  http.rs  main.rs  mcp.rs  osv.rs  scan.rs
